cabal-version:       >=1.10

name:                enrichment
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13, lens
  -- hs-source-dirs:
  default-language:    Haskell2010
